<resources>
    <string name="app_name" translatable="false">skincareadvisor</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="routine">Routine</string>
    <string name="add_schedule_title">Add a product to your routine</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="monday_short">M</string>
    <string name="tuesday_short">T</string>
    <string name="wednesday_short">W</string>
    <string name="thursday_short">T</string>
    <string name="friday_short">F</string>
    <string name="saturday_short">S</string>
    <string name="sunday_short">S</string>
    <string name="name_of_product">Name of product</string>
    <string name="empty_name_warning">Enter the name of the product!</string>


    <string name="notificaiton_title">SkinTrial</string>
    <string name="notification_description">Time for Skincare | </string>
</resources>