<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="schedule"
            type="com.frezzcoding.skincareadvisor.data.Schedule"
            />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/creamy"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/creamy">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:layout_margin="15dp"
                    android:text="@string/add_schedule_title"
                    />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toLeftOf="@id/btn_save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_marginBottom="15dp"
                    android:text="@string/cancel"
                    />
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/btn_cancel"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginBottom="15dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/save"
                    />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/layout_style"
                app:layout_constraintBottom_toTopOf="@+id/btn_save"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                app:layout_constraintTop_toBottomOf="@id/tv_title">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_title"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="30dp"
                    android:paddingBottom="10dp"
                    android:textColor="#000000"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_of_product"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{schedule.title}"
                        android:textColor="#000000" />
                </com.google.android.material.textfield.TextInputLayout>

                <NumberPicker
                    android:id="@+id/time_picker_start_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:theme="@style/DefaultNumberPickerTheme"
                    android:value="@{schedule.hour}"
                    app:layout_constraintRight_toLeftOf="@id/tv_centre"
                    app:layout_constraintTop_toBottomOf="@id/layout_selectdays" />

                <TextView
                    android:id="@+id/tv_centre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <NumberPicker
                    android:id="@+id/time_picker_start_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:theme="@style/DefaultNumberPickerTheme"
                    android:value="@{schedule.min}"
                    app:layout_constraintLeft_toRightOf="@id/tv_centre"
                    app:layout_constraintTop_toBottomOf="@id/layout_selectdays" />


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_selectdays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_margin="20dp"
                        app:layout_constraintTop_toBottomOf="@id/til_title">

                        <Button
                            android:id="@+id/tv_monday"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/monday_short"
                            android:textSize="20sp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toLeftOf="@id/tv_tuesday"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/tv_tuesday"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical|center_horizontal"
                            android:padding="10dp"
                            android:text="@string/tuesday_short"
                            android:textSize="20sp"
                            app:layout_constraintLeft_toRightOf="@id/tv_monday"
                            app:layout_constraintRight_toLeftOf="@id/tv_wednesday"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/tv_wednesday"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#0000"
                            android:gravity="center_vertical|center_horizontal"
                            android:padding="10dp"
                            android:text="@string/wednesday_short"
                            android:textSize="20sp"
                            app:layout_constraintLeft_toRightOf="@id/tv_tuesday"
                            app:layout_constraintRight_toLeftOf="@id/tv_thursday"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/tv_thursday"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical|center_horizontal"
                            android:padding="10dp"
                            android:text="@string/thursday_short"
                            android:textSize="20sp"
                            app:layout_constraintLeft_toRightOf="@id/tv_wednesday"
                            app:layout_constraintRight_toLeftOf="@id/tv_friday"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/tv_friday"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical|center_horizontal"
                            android:padding="10dp"
                            android:text="S"
                            android:textSize="20sp"
                            app:layout_constraintLeft_toRightOf="@id/tv_thursday"
                            app:layout_constraintRight_toLeftOf="@id/tv_saturday"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/tv_saturday"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical|center_horizontal"
                            android:padding="10dp"
                            android:text="S"
                            android:textSize="20sp"
                            app:layout_constraintLeft_toRightOf="@id/tv_friday"
                            app:layout_constraintRight_toLeftOf="@id/tv_sunday"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/tv_sunday"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical|center_horizontal"
                            android:padding="10dp"
                            android:text="D"
                            android:textSize="20sp"
                            app:layout_constraintLeft_toRightOf="@id/tv_saturday"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
